CREATE TABLE caution_foods (alternative_suggestion text,
  reason text NOT NULL,
  caution_level text NOT NULL,
  category text NOT NULL,
  food_name text NOT NULL,
  id uuid NOT NULL,
  updated_at timestamp with time zone,
  created_at timestamp with time zone,
  CONSTRAINT caution_foods_pkey PRIMARY KEY (id));

CREATE TABLE clipped_recipes (user_id uuid NOT NULL,
  id uuid NOT NULL,
  nutrition_per_serving jsonb NOT NULL,
  ingredients jsonb,
  recipe_type text,
  source_platform text,
  source_url text NOT NULL,
  image_url text,
  is_favorite boolean,
  caution_level text,
  servings integer,
  clipped_at timestamp with time zone,
  last_used_at timestamp with time zone,
  created_at timestamp with time zone,
  updated_at timestamp with time zone,
  caution_foods ARRAY,
  title text NOT NULL,
  CONSTRAINT clipped_recipes_pkey PRIMARY KEY (id));

CREATE TABLE daily_nutri_advice (user_id uuid NOT NULL,
  created_at timestamp with time zone,
  is_read boolean,
  recommended_foods ARRAY,
  advice_detail text,
  advice_summary text NOT NULL,
  updated_at timestamp with time zone,
  advice_type text NOT NULL,
  advice_date date NOT NULL,
  id uuid NOT NULL,
  CONSTRAINT daily_nutri_advice_pkey PRIMARY KEY (id));

CREATE TABLE daily_nutrition_logs (user_id uuid NOT NULL,
  log_date date,
  id uuid NOT NULL,
  nutrition_data jsonb,
  ai_comment text,
  created_at timestamp with time zone,
  updated_at timestamp with time zone,
  CONSTRAINT daily_nutrition_logs_pkey PRIMARY KEY (id));

CREATE TABLE meal_nutrients (iron numeric,
  folic_acid numeric,
  calcium numeric,
  vitamin_d numeric,
  confidence_score numeric,
  created_at timestamp with time zone,
  id uuid NOT NULL,
  meal_id uuid NOT NULL,
  calories numeric,
  protein numeric,
  CONSTRAINT meal_nutrients_pkey PRIMARY KEY (id));

CREATE TABLE meal_recipe_entries (portion_size double precision,
  created_at timestamp with time zone,
  updated_at timestamp with time zone,
  meal_id uuid NOT NULL,
  id uuid NOT NULL,
  clipped_recipe_id uuid NOT NULL,
  CONSTRAINT meal_recipe_entries_pkey PRIMARY KEY (id));

CREATE TABLE meals (id uuid NOT NULL,
  user_id uuid NOT NULL,
  meal_type character varying,
  meal_date date,
  photo_url text,
  food_description jsonb,
  nutrition_data jsonb,
  servings integer,
  created_at timestamp with time zone,
  updated_at timestamp with time zone,
  CONSTRAINT meals_pkey PRIMARY KEY (id));

CREATE TABLE nutrition_goal_prog (actual_calcium numeric,
  actual_vitamin_d numeric,
  calories_percent numeric,
  protein_percent numeric,
  actual_folic_acid numeric,
  iron_percent numeric,
  folic_acid_percent numeric,
  calcium_percent numeric,
  vitamin_d_percent numeric,
  actual_iron numeric,
  actual_protein numeric,
  actual_calories numeric,
  target_vitamin_d numeric,
  target_calcium numeric,
  target_folic_acid numeric,
  target_iron numeric,
  target_protein numeric,
  target_calories numeric,
  meal_date date,
  trimester integer,
  user_id uuid);

CREATE TABLE nutrition_targets (iron numeric,
  created_at timestamp with time zone,
  vitamin_d numeric,
  calcium numeric,
  folic_acid numeric,
  protein numeric,
  calories numeric,
  trimester integer NOT NULL,
  id uuid NOT NULL,
  CONSTRAINT nutrition_targets_pkey PRIMARY KEY (id));

CREATE TABLE profiles (user_id uuid NOT NULL,
  due_date date,
  weight numeric,
  height numeric,
  trimester integer,
  pregnancy_week integer,
  age integer,
  id uuid NOT NULL,
  updated_at timestamp with time zone,
  created_at timestamp with time zone,
  auto_update_week boolean,
  child_family_members integer,
  adult_family_members integer,
  dietary_restrictions ARRAY,
  CONSTRAINT profiles_pkey PRIMARY KEY (id));

CREATE TABLE weight_logs (comment text,
  weight numeric NOT NULL,
  log_date date NOT NULL,
  user_id uuid NOT NULL,
  id uuid NOT NULL,
  created_at timestamp with time zone,
  CONSTRAINT weight_logs_pkey PRIMARY KEY (id));

