@startuml Maternal Nutrition System ER Diagram

' Styling
skinparam linetype ortho
skinparam dpi 300
skinparam PackageStyle rectangle
skinparam Shadowing false
skinparam ClassBackgroundColor #FEFECE
skinparam ClassBorderColor #A80036
skinparam NoteBorderColor #A80036
skinparam NoteBackgroundColor #FEFECE

' Core Tables
entity "profiles" as profiles {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  age : INT
  pregnancy_week : INT
  trimester : INT <<generated>>
  height : NUMERIC
  weight : NUMERIC
  due_date : DATE
  dietary_restrictions : TEXT[]
  adult_family_members : INT
  child_family_members : INT
  auto_update_week : BOOLEAN
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "meals" as meals {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  meal_type : VARCHAR
  meal_date : DATE
  photo_url : TEXT
  food_description : JSONB
  nutrition_data : JSONB
  servings : INT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "meal_nutrients" as meal_nutrients {
  * id : UUID <<PK>>
  --
  * meal_id : UUID <<FK>>
  calories : NUMERIC
  protein : NUMERIC
  iron : NUMERIC
  folic_acid : NUMERIC
  calcium : NUMERIC
  vitamin_d : NUMERIC
  confidence_score : NUMERIC
  created_at : TIMESTAMPTZ
}

entity "nutrition_targets" as nutrition_targets {
  * id : UUID <<PK>>
  --
  * trimester : INT <<FK>>
  calories : NUMERIC
  protein : NUMERIC
  iron : NUMERIC
  folic_acid : NUMERIC
  calcium : NUMERIC
  vitamin_d : NUMERIC
  created_at : TIMESTAMPTZ
}

' Support Tables
entity "weight_logs" as weight_logs {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  log_date : DATE
  weight : NUMERIC
  comment : TEXT
  created_at : TIMESTAMPTZ
}

entity "daily_nutrition_logs" as daily_nutrition_logs {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  log_date : DATE
  nutrition_data : JSONB
  ai_comment : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "daily_nutri_advice" as daily_nutri_advice {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  advice_date : DATE
  advice_type : TEXT
  advice_summary : TEXT
  advice_detail : TEXT
  recommended_foods : TEXT[]
  is_read : BOOLEAN
  created_at : TIMESTAMPTZ
}
note right of daily_nutri_advice : Modified table structure

' Recipe Clip Features - New Tables
entity "clipped_recipes" as clipped_recipes {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  title : TEXT
  image_url : TEXT
  source_url : TEXT
  source_platform : TEXT
  recipe_type : TEXT
  ingredients : JSONB
  nutrition_per_serving : JSONB
  caution_foods : TEXT[]
  caution_level : TEXT
  is_favorite : BOOLEAN
  servings : INTEGER
  clipped_at : TIMESTAMPTZ
  last_used_at : TIMESTAMPTZ
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}
note right of clipped_recipes : New table for recipe clipping

entity "meal_recipe_entries" as meal_recipe_entries {
  * id : UUID <<PK>>
  --
  * meal_id : UUID <<FK>>
  * clipped_recipe_id : UUID <<FK>>
  portion_size : FLOAT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}
note right of meal_recipe_entries : New junction table

entity "caution_foods" as caution_foods {
  * id : UUID <<PK>>
  --
  food_name : TEXT
  category : TEXT
  caution_level : TEXT
  reason : TEXT
  alternative_suggestion : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}
note right of caution_foods : New table for pregnancy food warnings

' View
entity "nutrition_goal_prog (VIEW)" as nutrition_goal_prog {
  user_id : UUID
  trimester : INT
  meal_date : DATE
  target_calories : NUMERIC
  target_protein : NUMERIC
  target_iron : NUMERIC
  target_folic_acid : NUMERIC
  target_calcium : NUMERIC
  target_vitamin_d : NUMERIC
  actual_calories : NUMERIC
  actual_protein : NUMERIC
  actual_iron : NUMERIC
  actual_folic_acid : NUMERIC
  actual_calcium : NUMERIC
  actual_vitamin_d : NUMERIC
  calories_percent : NUMERIC
  protein_percent : NUMERIC
  iron_percent : NUMERIC
  folic_acid_percent : NUMERIC
  calcium_percent : NUMERIC
  vitamin_d_percent : NUMERIC
}

' Auth Table
entity "auth.users" as auth_users {
  * id : UUID <<PK>>
  --
  email : TEXT
  ' Other Supabase Auth fields
}

' Relationships
auth_users ||--o{ profiles : "user_id"
auth_users ||--o{ meals : "user_id"
auth_users ||--o{ weight_logs : "user_id"
auth_users ||--o{ daily_nutrition_logs : "user_id"
auth_users ||--o{ daily_nutri_advice : "user_id"
auth_users ||--o{ clipped_recipes : "user_id"

profiles |o--o{ nutrition_goal_prog : "user_id"
profiles }o..|| nutrition_targets : "trimester"

meals ||--o{ meal_nutrients : "meal_id"
meals }o--o{ nutrition_goal_prog : "user_id, meal_date"
meals ||--o{ meal_recipe_entries : "meal_id"

nutrition_targets ||--o{ nutrition_goal_prog : "trimester"

clipped_recipes ||--o{ meal_recipe_entries : "clipped_recipe_id"

@enduml